--- a/tools/Makefile
+++ b/tools/Makefile
@@ -7,7 +7,7 @@ PROJECTS:= \
 include ../env.mk
 
 # Build ssload only if we have a development cartridge to use
-ifneq ($(strip $(OPTION_DEV_CARTRIDGE)),0)
+ifneq ($(strip $(YAUL_OPTION_DEV_CARTRIDGE)),0)
 PROJECTS+= \
 	ssload
 endif
@@ -15,7 +15,7 @@ endif
 .PHONY: all clean distclean install
 
 all clean distclean install:
-	$(ECHO)mkdir -p $(BUILD_ROOT)/$(BUILD)
+	$(ECHO)mkdir -p $(YAUL_BUILD_ROOT)/$(YAUL_BUILD)
 	$(ECHO)for tool in $(PROJECTS); do \
 		printf -- "$(V_BEGIN_CYAN)tools $${tool}$(V_END) $(V_BEGIN_GREEN)$@$(V_END)\n"; \
 		($(MAKE) -C $${tool} $@) || exit $${?}; \
