--- a/yaul.env.in
+++ b/yaul.env.in
@@ -4,16 +4,20 @@
 
 # Path to tool-chain installation directory. This assumes 'sh-elf' and
 # 'm68k-elf' cross-compilers are installed
-export INSTALL_ROOT=/opt/tool-chains
+export YAUL_INSTALL_ROOT=/opt/tool-chains
+
+# By default, this is the same path that contains the tool-chain, but
+# it can be set to another path instead
+export YAUL_PREFIX=""
 
 # Path to where the build is to be located
-export BUILD_ROOT=${HOME}/libyaul
+export YAUL_BUILD_ROOT=${HOME}/libyaul
 
 # Name of build directory
-export BUILD=build
+export YAUL_BUILD=build
 
 # Option: Development cart used:
 #  0: None
 #  1: USB flash cartridge
 #  2: Datel Action Replay cartridge
-export OPTION_DEV_CARTRIDGE=0
+export YAUL_OPTION_DEV_CARTRIDGE=0
