--- a/tools/bcl/Makefile
+++ b/tools/bcl/Makefile
@@ -2,7 +2,7 @@ TARGET:= bcl
 
 include ../../env.mk
 
-SUB_BUILD:=$(BUILD)/tools/$(TARGET)
+SUB_BUILD:=$(YAUL_BUILD)/tools/$(TARGET)
 
 CFLAGS:= -O2 \
 	-s \
@@ -23,36 +23,36 @@ SRCS:= bcl.c \
 	rle.c \
 	shannonfano.c
 
-OBJS:= $(addprefix $(BUILD_ROOT)/$(SUB_BUILD)/,$(SRCS:.c=.o))
-DEPS:= $(addprefix $(BUILD_ROOT)/$(SUB_BUILD)/,$(SRCS:.c=.d))
+OBJS:= $(addprefix $(YAUL_BUILD_ROOT)/$(SUB_BUILD)/,$(SRCS:.c=.o))
+DEPS:= $(addprefix $(YAUL_BUILD_ROOT)/$(SUB_BUILD)/,$(SRCS:.c=.d))
 
 .PHONY: all clean distclean install
 
-all: $(BUILD_ROOT)/$(SUB_BUILD)/$(TARGET)
+all: $(YAUL_BUILD_ROOT)/$(SUB_BUILD)/$(TARGET)
 
-$(BUILD_ROOT)/$(SUB_BUILD)/$(TARGET): $(BUILD_ROOT)/$(SUB_BUILD) $(OBJS)
-	@printf -- "$(V_BEGIN_YELLOW)$(shell v="$@"; printf -- "$${v#$(BUILD_ROOT)/}")$(V_END)\n"
+$(YAUL_BUILD_ROOT)/$(SUB_BUILD)/$(TARGET): $(YAUL_BUILD_ROOT)/$(SUB_BUILD) $(OBJS)
+	@printf -- "$(V_BEGIN_YELLOW)$(shell v="$@"; printf -- "$${v#$(YAUL_BUILD_ROOT)/}")$(V_END)\n"
 	$(ECHO)$(CC) -o $@ $(OBJS)
 	$(ECHO)$(STRIP) -s $@
 
-$(BUILD_ROOT)/$(SUB_BUILD):
+$(YAUL_BUILD_ROOT)/$(SUB_BUILD):
 	$(ECHO)mkdir -p $@
 
-$(BUILD_ROOT)/$(SUB_BUILD)/%.o: %.c
-	@printf -- "$(V_BEGIN_YELLOW)$(shell v="$@"; printf -- "$${v#$(BUILD_ROOT)/}")$(V_END)\n"
+$(YAUL_BUILD_ROOT)/$(SUB_BUILD)/%.o: %.c
+	@printf -- "$(V_BEGIN_YELLOW)$(shell v="$@"; printf -- "$${v#$(YAUL_BUILD_ROOT)/}")$(V_END)\n"
 	$(ECHO)mkdir -p $(@D)
-	$(ECHO)$(CC) -Wp,-MMD,$(BUILD_ROOT)/$(SUB_BUILD)/$*.d $(CFLAGS) \
+	$(ECHO)$(CC) -Wp,-MMD,$(YAUL_BUILD_ROOT)/$(SUB_BUILD)/$*.d $(CFLAGS) \
 		-c -o $@ $<
-	$(ECHO)$(SED) -i -e '1s/^\(.*\)$$/$(subst /,\/,$(dir $@))\1/' $(BUILD_ROOT)/$(SUB_BUILD)/$*.d
+	$(ECHO)$(SED) -i -e '1s/^\(.*\)$$/$(subst /,\/,$(dir $@))\1/' $(YAUL_BUILD_ROOT)/$(SUB_BUILD)/$*.d
 
 clean:
-	$(ECHO)$(RM) $(OBJS) $(DEPS) $(BUILD_ROOT)/$(SUB_BUILD)/$(TARGET)
+	$(ECHO)$(RM) $(OBJS) $(DEPS) $(YAUL_BUILD_ROOT)/$(SUB_BUILD)/$(TARGET)
 
 distclean: clean
 
-install: $(BUILD_ROOT)/$(SUB_BUILD)/$(TARGET)
+install: $(YAUL_BUILD_ROOT)/$(SUB_BUILD)/$(TARGET)
 	@printf -- "$(V_BEGIN_BLUE)$(SUB_BUILD)/$(TARGET)$(V_END)\n"
-	$(ECHO)mkdir -p $(INSTALL_ROOT)/bin
-	$(ECHO)$(INSTALL) -m 755 $< $(INSTALL_ROOT)/bin/
+	$(ECHO)mkdir -p $(YAUL_INSTALL_ROOT)/bin
+	$(ECHO)$(INSTALL) -m 755 $< $(YAUL_INSTALL_ROOT)/bin/
 
 -include $(DEPS)
