--- a/tools/genromfs/Makefile
+++ b/tools/genromfs/Makefile
@@ -3,7 +3,7 @@ include ../../env.mk
 TARGET:= genromfs
 PROGRAM:= $(TARGET)$(EXE_EXT)
 
-SUB_BUILD:=$(BUILD)/tools/$(TARGET)
+SUB_BUILD:=$(YAUL_BUILD)/tools/$(TARGET)
 
 CFLAGS:= -O2 \
 	-s \
@@ -19,39 +19,39 @@ CFLAGS:= -O2 \
 SRCS:= genromfs.c
 INCLUDES:= /usr/include
 
-OBJS:= $(addprefix $(BUILD_ROOT)/$(SUB_BUILD)/,$(SRCS:.c=.o))
-DEPS:= $(addprefix $(BUILD_ROOT)/$(SUB_BUILD)/,$(SRCS:.c=.d))
+OBJS:= $(addprefix $(YAUL_BUILD_ROOT)/$(SUB_BUILD)/,$(SRCS:.c=.o))
+DEPS:= $(addprefix $(YAUL_BUILD_ROOT)/$(SUB_BUILD)/,$(SRCS:.c=.d))
 
 .PHONY: all clean distclean install
 
-all: $(BUILD_ROOT)/$(SUB_BUILD)/$(PROGRAM)
+all: $(YAUL_BUILD_ROOT)/$(SUB_BUILD)/$(PROGRAM)
 
-$(BUILD_ROOT)/$(SUB_BUILD)/$(PROGRAM): $(BUILD_ROOT)/$(SUB_BUILD) $(OBJS)
-	@printf -- "$(V_BEGIN_YELLOW)$(shell v="$@"; printf -- "$${v#$(BUILD_ROOT)/}")$(V_END)\n"
+$(YAUL_BUILD_ROOT)/$(SUB_BUILD)/$(PROGRAM): $(YAUL_BUILD_ROOT)/$(SUB_BUILD) $(OBJS)
+	@printf -- "$(V_BEGIN_YELLOW)$(shell v="$@"; printf -- "$${v#$(YAUL_BUILD_ROOT)/}")$(V_END)\n"
 	$(ECHO)$(CC) -o $@ $(OBJS)
 	$(ECHO)$(STRIP) -s $@
 
-$(BUILD_ROOT)/$(SUB_BUILD):
+$(YAUL_BUILD_ROOT)/$(SUB_BUILD):
 	$(ECHO)mkdir -p $@
 
-$(BUILD_ROOT)/$(SUB_BUILD)/%.o: %.c
-	@printf -- "$(V_BEGIN_YELLOW)$(shell v="$@"; printf -- "$${v#$(BUILD_ROOT)/}")$(V_END)\n"
+$(YAUL_BUILD_ROOT)/$(SUB_BUILD)/%.o: %.c
+	@printf -- "$(V_BEGIN_YELLOW)$(shell v="$@"; printf -- "$${v#$(YAUL_BUILD_ROOT)/}")$(V_END)\n"
 	$(ECHO)mkdir -p $(@D)
-	$(ECHO)$(CC) -Wp,-MMD,$(BUILD_ROOT)/$(SUB_BUILD)/$*.d $(CFLAGS) \
+	$(ECHO)$(CC) -Wp,-MMD,$(YAUL_BUILD_ROOT)/$(SUB_BUILD)/$*.d $(CFLAGS) \
 		$(foreach DIR,$(INCLUDES),-I$(DIR)) \
 		-c -o $@ $<
-	$(ECHO)$(SED) -i -e '1s/^\(.*\)$$/$(subst /,\/,$(dir $@))\1/' $(BUILD_ROOT)/$(SUB_BUILD)/$*.d
+	$(ECHO)$(SED) -i -e '1s/^\(.*\)$$/$(subst /,\/,$(dir $@))\1/' $(YAUL_BUILD_ROOT)/$(SUB_BUILD)/$*.d
 
 clean:
-	$(ECHO)$(RM) $(OBJS) $(DEPS) $(BUILD_ROOT)/$(SUB_BUILD)/$(PROGRAM)
+	$(ECHO)$(RM) $(OBJS) $(DEPS) $(YAUL_BUILD_ROOT)/$(SUB_BUILD)/$(PROGRAM)
 
 distclean: clean
 
-install: $(BUILD_ROOT)/$(SUB_BUILD)/$(PROGRAM)
+install: $(YAUL_BUILD_ROOT)/$(SUB_BUILD)/$(PROGRAM)
 	@printf -- "$(V_BEGIN_BLUE)$(SUB_BUILD)/$(PROGRAM)$(V_END)\n"
-	$(ECHO)mkdir -p $(INSTALL_ROOT)/bin
-	$(ECHO)$(INSTALL) -m 755 $< $(INSTALL_ROOT)/bin/
+	$(ECHO)mkdir -p $(YAUL_INSTALL_ROOT)/bin
+	$(ECHO)$(INSTALL) -m 755 $< $(YAUL_INSTALL_ROOT)/bin/
 	@printf -- "$(V_BEGIN_BLUE)fsck.genromfs$(V_END)\n"
-	$(ECHO)$(INSTALL) -m 755 fsck.genromfs $(INSTALL_ROOT)/bin/
+	$(ECHO)$(INSTALL) -m 755 fsck.genromfs $(YAUL_INSTALL_ROOTx)/bin/
 
 -include $(DEPS)
