--- a/tools/make-iso/Makefile
+++ b/tools/make-iso/Makefile
@@ -8,5 +8,5 @@ all clean distclean:
 
 install: $(TARGET)
 	@printf -- "$(V_BEGIN_BLUE)$(TARGET)$(V_END)\n"
-	$(ECHO)mkdir -p $(INSTALL_ROOT)/bin
-	$(ECHO)$(INSTALL) -m 755 $< $(INSTALL_ROOT)/bin/
+	$(ECHO)mkdir -p $(YAUL_INSTALL_ROOT)/bin
+	$(ECHO)$(INSTALL) -m 755 $< $(YAUL_INSTALL_ROOT)/bin/
