--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,6 @@ before_script:
   - docker pull ijacquez/libyaul-tool-chain:1.3
 
 script:
-  - docker run --name "container" -e "TRAVIS_BRANCH=${TRAVIS_BRANCH}" -e "BUILD_TYPE=${BUILD_TYPE}" -e "YAUL_INSTALL_ROOT=${YAUL_INSTALL_ROOT}" -e "YAUL_BUILD_ROOT=${YAUL_BUILD_ROOT}" -e "YAUL_BUILD=${YAUL_BUILD}" -e "YAUL_OPTION_DEV_CARTRIDGE=${YAUL_OPTION_DEV_CARTRIDGE}" -t -d ijacquez/libyaul-tool-chain:1.3 sh
+  - docker run --name "container" -t -d ijacquez/libyaul-tool-chain:1.3 sh
   - docker cp .travis/test.sh container:/root/test.sh
   - docker exec container sh -e /root/test.sh
