--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,6 @@ sudo: required
 
 language: c
 
-services:
-  - docker
-
 env:
   global:
     - YAUL_INSTALL_ROOT=/tool-chains
@@ -25,9 +22,11 @@ env:
     - YAUL_OPTION_DEV_CARTRIDGE=2 BUILD_TYPE=tools
 
 before_script:
-  - docker pull ijacquez/libyaul-tool-chain:1.3
+  - wget -O tool-chain.tar.bz2 https://drive.google.com/uc?export=download&id=1Fk5eIC6x6y2qNBMNCtgv8ZzrS_1386kB
+  - mkdir /tool-chains
+  - tar mxvfjp tool-chain.tar.bz2 -C /tool-chains/
+  - git submodule init
+  - git submodule update -f
 
 script:
-  - docker run --name "container" -e "TRAVIS_BRANCH=${TRAVIS_BRANCH}" -e "BUILD_TYPE=${BUILD_TYPE}" -e "YAUL_INSTALL_ROOT=${YAUL_INSTALL_ROOT}" -e "YAUL_BUILD_ROOT=${YAUL_BUILD_ROOT}" -e "YAUL_BUILD=${YAUL_BUILD}" -e "YAUL_OPTION_DEV_CARTRIDGE=${YAUL_OPTION_DEV_CARTRIDGE}" -t -d ijacquez/libyaul-tool-chain:1.3 sh
-  - docker cp .travis/test.sh container:/root/test.sh
-  - docker exec container sh -e /root/test.sh
+  - .travis/test.sh
