Add tools to support RTags
Currently, there is no support for the examples. A solution to this
would be to install the custom rdm and rc scripts and update the
pre/post command Makefiles.

--- a/yaul.env.in
+++ b/yaul.env.in
@@ -1,4 +1,4 @@
-# -*- mode: config -*-
+# -*- mode: conf -*-
 
 # Only ABSOLUTE paths are to be used when applicable!
 
@@ -15,6 +15,9 @@ export YAUL_BUILD_ROOT=${HOME}/libyaul
 
 # Name of build directory
 export YAUL_BUILD=build
+
+# RTags support is disabled by default
+export YAUL_RTAGS=false
 
 # Option: Development cart used:
 #  0: None
