--- a/yaul.env.in
+++ b/yaul.env.in
@@ -24,3 +24,8 @@ export YAUL_RTAGS=false
 #  1: USB flash cartridge
 #  2: Datel Action Replay cartridge
 export YAUL_OPTION_DEV_CARTRIDGE=0
+
+# Option: Spin on calling abort():
+#  0: System reset on release when aborting
+#  1: Spin when aborting
+export YAUL_OPTION_SPIN_ON_ABORT=1
