--- a/yaul.env.in
+++ b/yaul.env.in
@@ -2,9 +2,11 @@
 
 # Only ABSOLUTE paths are to be used when applicable!
 
-# Path to tool-chain installation directory. This assumes 'sh-elf' and
-# 'm68k-elf' cross-compilers are installed
+# Path to tool-chain installation directory
 export YAUL_INSTALL_ROOT=/opt/tool-chains
+
+# SH-2 tool-chain prefix
+export YAUL_ARCH_SH_PREFIX=sh2eb-elf
 
 # By default, this is the same path that contains the tool-chain, but
 # it can be set to another path instead
