Add YAUL_ARCH_M68K_PREFIX option in yaul.env.in

--- a/yaul.env.in
+++ b/yaul.env.in
@@ -8,6 +8,9 @@ export YAUL_INSTALL_ROOT=/opt/tool-chains
 # SH-2 tool-chain prefix
 export YAUL_ARCH_SH_PREFIX=sh2eb-elf
 
+# M68k tool-chain prefix
+export YAUL_ARCH_M68K_PREFIX=m68keb-elf
+
 # By default, this is the same path that contains the tool-chain, but
 # it can be set to another path instead
 export YAUL_PREFIX=""
