Allow for more flexibility in tool-chain paths

--- a/yaul.env.in
+++ b/yaul.env.in
@@ -2,8 +2,18 @@
 
 # Only ABSOLUTE paths are to be used when applicable!
 
+# If your path to GCC executable is:
+#   /home/user/x-tools/foo/bar/bin/sh2eb-elf-gcc
+# then set the variables to:
+#   YAUL_INSTALL_ROOT=/home/user/x-tools/foo/bar
+#   YAUL_PROG_SH_PREFIX=sh2eb-elf
+#   YAUL_ARCH_SH_PREFIX=sh-elf
+
 # Path to tool-chain installation directory
-export YAUL_INSTALL_ROOT=/opt/tool-chains
+export YAUL_INSTALL_ROOT=/opt/tool-chains/sh2eb-elf
+
+# SH-2 tool-chain program prefix (leave empty if the same as YAUL_ARCH_SH_PREFIX)
+export YAUL_PROG_SH_PREFIX=
 
 # SH-2 tool-chain prefix
 export YAUL_ARCH_SH_PREFIX=sh2eb-elf
