Improve documentation and set YAUL_PROG_SH_PREFIX

--- a/yaul.env.in
+++ b/yaul.env.in
@@ -32,7 +32,7 @@ export YAUL_BUILD_ROOT=${HOME}/libyaul
 export YAUL_BUILD=build
 
 # RTags support is disabled by default
-export YAUL_RTAGS=false
+export YAUL_RTAGS=0
 
 # Option: Development cart used:
 #  0: None
