Install libftdi1-dev

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ env:
     - YAUL_OPTION_DEV_CARTRIDGE=2 BUILD_TYPE=tools
 
 before_script:
+  - sudo apt install -y libftdi1-dev
   - wget -4 --retry-connrefused --waitretry=300 -O "tool-chain.tar.bz2" "https://drive.google.com/uc?export=download&id=1VWZv3lJ1_U02p4Sg7rZU7yn4igBdw2b7"
   - sudo mkdir /tool-chains
   - sudo tar mxvfjp "tool-chain.tar.bz2" -C /tool-chains/
