Change support to generate compile_commands.json

--- a/yaul.env.in
+++ b/yaul.env.in
@@ -31,8 +31,10 @@ export YAUL_BUILD_ROOT=${HOME}/libyaul
 # Name of build directory
 export YAUL_BUILD=build
 
-# RTags support is disabled by default
-export YAUL_RTAGS=0
+# JSON compilation database support
+#  0: Disable
+#  1: Enable generation of compile_commands.json
+export YAUL_CDB=1
 
 # Option: Development cart used:
 #  0: None
