Add TLSF support

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,20 @@ env:
     - YAUL_BUILD_ROOT=/tmp
     - YAUL_BUILD=build
   matrix:
-    - YAUL_OPTION_DEV_CARTRIDGE=0 BUILD_TYPE=release
-    - YAUL_OPTION_DEV_CARTRIDGE=0 BUILD_TYPE=debug
+    - YAUL_OPTION_DEV_CARTRIDGE=0 BUILD_TYPE=release YAUL_OPTION_SPIN_ON_ABORT=0
+    - YAUL_OPTION_DEV_CARTRIDGE=0 BUILD_TYPE=release YAUL_OPTION_SPIN_ON_ABORT=1
+    - YAUL_OPTION_DEV_CARTRIDGE=0 BUILD_TYPE=debug YAUL_OPTION_SPIN_ON_ABORT=0
+    - YAUL_OPTION_DEV_CARTRIDGE=0 BUILD_TYPE=debug YAUL_OPTION_SPIN_ON_ABORT=1
 
-    - YAUL_OPTION_DEV_CARTRIDGE=1 BUILD_TYPE=release
-    - YAUL_OPTION_DEV_CARTRIDGE=1 BUILD_TYPE=debug
+    - YAUL_OPTION_DEV_CARTRIDGE=1 BUILD_TYPE=release YAUL_OPTION_SPIN_ON_ABORT=0
+    - YAUL_OPTION_DEV_CARTRIDGE=1 BUILD_TYPE=release YAUL_OPTION_SPIN_ON_ABORT=1
+    - YAUL_OPTION_DEV_CARTRIDGE=1 BUILD_TYPE=debug YAUL_OPTION_SPIN_ON_ABORT=0
+    - YAUL_OPTION_DEV_CARTRIDGE=1 BUILD_TYPE=debug YAUL_OPTION_SPIN_ON_ABORT=1
 
-    - YAUL_OPTION_DEV_CARTRIDGE=2 BUILD_TYPE=release
-    - YAUL_OPTION_DEV_CARTRIDGE=2 BUILD_TYPE=debug
+    - YAUL_OPTION_DEV_CARTRIDGE=2 BUILD_TYPE=release YAUL_OPTION_SPIN_ON_ABORT=0
+    - YAUL_OPTION_DEV_CARTRIDGE=2 BUILD_TYPE=release YAUL_OPTION_SPIN_ON_ABORT=1
+    - YAUL_OPTION_DEV_CARTRIDGE=2 BUILD_TYPE=debug YAUL_OPTION_SPIN_ON_ABORT=0
+    - YAUL_OPTION_DEV_CARTRIDGE=2 BUILD_TYPE=debug YAUL_OPTION_SPIN_ON_ABORT=1
 
     - YAUL_OPTION_DEV_CARTRIDGE=0 BUILD_TYPE=tools
     - YAUL_OPTION_DEV_CARTRIDGE=1 BUILD_TYPE=tools
