--- a/yaul.env.in
+++ b/yaul.env.in
@@ -42,6 +42,11 @@ export YAUL_CDB=1
 #  2: Datel Action Replay cartridge
 export YAUL_OPTION_DEV_CARTRIDGE=0
 
+# Option: Memory allocator used:
+#  tlsf: Use TLSF (Two-Level Segregated Fit)
+#  slob: Use SLOB (Simple List of Blocks)
+export YAUL_OPTION_MALLOC_IMPL="tlsf"
+
 # Option: Spin on calling abort():
 #  0: System reset on release when aborting
 #  1: Spin when aborting
