--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,6 @@ env:
     - YAUL_OPTION_DEV_CARTRIDGE=2 BUILD_TYPE=debug YAUL_OPTION_SPIN_ON_ABORT=0
     - YAUL_OPTION_DEV_CARTRIDGE=2 BUILD_TYPE=debug YAUL_OPTION_SPIN_ON_ABORT=1
 
-    - YAUL_OPTION_DEV_CARTRIDGE=0 BUILD_TYPE=tools
-    - YAUL_OPTION_DEV_CARTRIDGE=1 BUILD_TYPE=tools
-    - YAUL_OPTION_DEV_CARTRIDGE=2 BUILD_TYPE=tools
-
 git:
   submodules: true
 
@@ -47,5 +43,4 @@ addons:
       - python3-click
 
 script:
-  - .travis/build-library.sh
-  - .travis/build-examples.sh
+  - .travis/test.sh
