Add genisoimage APT package

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,8 +39,9 @@ addons:
   apt:
     update: true
     packages:
-      - libftdi1-dev
-      - python3-click
+      - libftdi1-dev  # Required for tools/ssload
+      - python3-click # Required for libyaul/commmon/update-cdb
+      - genisoimage   # Required for tools/make-iso
 
 script:
   - .travis/test.sh
