--- a/tools/Makefile
+++ b/tools/Makefile
@@ -10,6 +10,7 @@ include ../env.mk
 # Build ssload only if we have a development cartridge to use
 ifneq ($(strip $(YAUL_OPTION_DEV_CARTRIDGE)),0)
 PROJECTS+= \
+	gdb-ftdi-proxy \
 	ssload
 endif
 
