Add RTags support back in

--- a/yaul.env.in
+++ b/yaul.env.in
@@ -36,6 +36,11 @@ export YAUL_BUILD=build
 #  1: Enable generation of compile_commands.json
 export YAUL_CDB=1
 
+# RTags RC executable absolute path
+export YAUL_CDB_RC_PATH="/usr/local/bin/rc"
+# RTags RDM executable absolute path
+export YAUL_CDB_RDM_PATH="/usr/local/bin/rdm"
+
 # Option: Development cart used:
 #  0: None
 #  1: USB flash cartridge
