Document build system variables

--- a/yaul.env.in
+++ b/yaul.env.in
@@ -56,3 +56,13 @@ export YAUL_OPTION_MALLOC_IMPL="tlsf"
 #  0: System reset on release when aborting
 #  1: Spin when aborting
 export YAUL_OPTION_SPIN_ON_ABORT=1
+
+# Compilation verbosity
+#   : Verbose
+#  1: Display build step line only
+export SILENT=
+
+# Display ANSI colors during build process
+#   : Display
+#  1: Do not display
+export NOCOLOR=
