Fix bugs & enforce mandatory TLSF for internal

--- a/yaul.env.in
+++ b/yaul.env.in
@@ -49,6 +49,7 @@ export YAUL_OPTION_DEV_CARTRIDGE=0
 
 # Option: Memory allocator used:
 #  tlsf: Use TLSF (Two-Level Segregated Fit)
+#      : Do not use any memory allocator
 export YAUL_OPTION_MALLOC_IMPL="tlsf"
 
 # Option: Spin on calling abort():
