--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,8 @@ addons:
     update: true
     packages:
       - libftdi1-dev  # Required for tools/ssload
+      - libudev-dev   # Required for tools/ssload
+      - libudev1      # Required for tools/ssload
       - python3-click # Required for libyaul/commmon/update-cdb
       - xorriso       # Required for tools/make-iso
 
