Add option to build assert support

--- a/yaul.env.in
+++ b/yaul.env.in
@@ -57,6 +57,11 @@ export YAUL_OPTION_SPIN_ON_ABORT=1
 #  1: Build GDB, but only if YAUL_OPTION_DEV_CARTRIDGE == 1
 export YAUL_OPTION_BUILD_GDB=0
 
+# Option: Build support for assert() when build type is release
+#  0: Compile out calls to assert()
+#  1: Support assert()
+export YAUL_OPTION_BUILD_ASSERT=0
+
 # Compilation verbosity
 #   : Verbose
 #  1: Display build step line only
