--- a/yaul.env.in
+++ b/yaul.env.in
@@ -10,7 +10,7 @@
 #   YAUL_ARCH_SH_PREFIX=sh-elf
 
 # Path to tool-chain installation directory
-export YAUL_INSTALL_ROOT=/opt/tool-chains/sh2eb-elf
+export YAUL_INSTALL_ROOT=/opt/x-tools/sh2eb-elf
 
 # SH-2 tool-chain program prefix (leave empty if the same as YAUL_ARCH_SH_PREFIX)
 export YAUL_PROG_SH_PREFIX=
@@ -31,43 +31,56 @@ export YAUL_BUILD_ROOT=${HOME}/libyaul
 # Name of build directory
 export YAUL_BUILD=build
 
-# JSON compilation database support
+# JSON compilation database support.
+# Values:
 #  0: Disable
 #  1: Enable generation of compile_commands.json
+# Notes:
+#  1. Executable gcc is expected in /usr/bin/gcc. If gcc is located elsewhere,
+#     set CDB_GCC to a valid absolute path to gcc.
+#  2. Python 3.7 is required.
+#  3. For now, <https://click.palletsprojects.com/en/7.x/> is required.
 export YAUL_CDB=1
 
 # Option: Development cart used:
+# Values:
 #  0: None
 #  1: USB flash cartridge
 #  2: Datel Action Replay cartridge
 export YAUL_OPTION_DEV_CARTRIDGE=0
 
 # Option: Memory allocator used:
+# Values:
 #  tlsf: Use TLSF (Two-Level Segregated Fit)
 #      : Do not use any memory allocator
 export YAUL_OPTION_MALLOC_IMPL="tlsf"
 
 # Option: Spin on calling abort():
+# Values:
 #  0: System reset on release when aborting
 #  1: Spin when aborting
 export YAUL_OPTION_SPIN_ON_ABORT=1
 
 # Option: Build GDB regardless of build type (debug, release)
+# Values:
 #  0: Default
 #  1: Build GDB, but only if YAUL_OPTION_DEV_CARTRIDGE == 1
 export YAUL_OPTION_BUILD_GDB=0
 
 # Option: Build support for assert() when build type is release
+# Values:
 #  0: Compile out calls to assert()
 #  1: Support assert()
 export YAUL_OPTION_BUILD_ASSERT=0
 
 # Compilation verbosity
+# Values:
 #   : Verbose
 #  1: Display build step line only
 export SILENT=
 
 # Display ANSI colors during build process
+# Values:
 #   : Display
 #  1: Do not display
 export NOCOLOR=
