Allow error output even when SILENT=1 & add paths

--- a/yaul.env.in
+++ b/yaul.env.in
@@ -1,6 +1,6 @@
 # -*- mode: conf -*-
 
-# Only ABSOLUTE paths are to be used when applicable!
+# Only ABSOLUTE paths are to be used!
 
 # If your path to GCC executable is:
 #   /home/user/x-tools/foo/bar/bin/sh2eb-elf-gcc
@@ -12,7 +12,8 @@
 # Path to tool-chain installation directory
 export YAUL_INSTALL_ROOT=/opt/x-tools/sh2eb-elf
 
-# SH-2 tool-chain program prefix (leave empty if the same as YAUL_ARCH_SH_PREFIX)
+# SH-2 tool-chain program prefix (leave empty if the same as
+# YAUL_ARCH_SH_PREFIX)
 export YAUL_PROG_SH_PREFIX=
 
 # SH-2 tool-chain prefix
@@ -21,8 +22,8 @@ export YAUL_ARCH_SH_PREFIX=sh2eb-elf
 # M68k tool-chain prefix
 export YAUL_ARCH_M68K_PREFIX=m68keb-elf
 
-# By default, this is the same path that contains the tool-chain, but
-# it can be set to another path instead
+# By default, this is the same path that contains the tool-chain, but it can be
+# set to another path instead
 export YAUL_PREFIX=""
 
 # Path to where the build is to be located
@@ -77,10 +78,18 @@ export YAUL_OPTION_BUILD_ASSERT=0
 # Values:
 #   : Verbose
 #  1: Display build step line only
-export SILENT=
+export SILENT=1
 
 # Display ANSI colors during build process
 # Values:
 #   : Display
 #  1: Do not display
 export NOCOLOR=
+
+# Absolute path for executable xorriso
+export MAKE_ISO_XORRISO=/usr/bin/xorriso
+
+# Absolute path for native GCC executable. This is used if YAUL_CDB=1
+export CDB_GCC=/usr/bin/gcc
+# Absolute path for native GCC executable. This is used if YAUL_CDB=1
+export CDB_CPP=/usr/bin/g++
