--- a/tools/Makefile
+++ b/tools/Makefile
@@ -10,9 +10,14 @@ include ../env.mk
 
 # Build ssload only if we have a development cartridge to use
 ifneq ($(strip $(YAUL_OPTION_DEV_CARTRIDGE)),0)
-PROJECTS+= \
-	gdb-ftdi-proxy \
-	ssload
+	PROJECTS+= \
+	    ssload
+
+    # Currently, gdb-ftdi-proxy is broken under Windows
+	ifneq ($(OS), Windows_NT)
+		PROJECTS+= \
+		    gdb-ftdi-proxy
+	endif
 endif
 
 .PHONY: all clean distclean install
