Use YAUL_PREFIX for tools

--- a/tools/genromfs/Makefile
+++ b/tools/genromfs/Makefile
@@ -56,9 +56,9 @@ distclean: clean
 
 install: $(YAUL_BUILD_ROOT)/$(SUB_BUILD)/$(PROGRAM)
 	@printf -- "$(V_BEGIN_BLUE)$(SUB_BUILD)/$(PROGRAM)$(V_END)\n"
-	$(ECHO)mkdir -p $(YAUL_INSTALL_ROOT)/bin
-	$(ECHO)$(INSTALL) -m 755 $< $(YAUL_INSTALL_ROOT)/bin/
+	$(ECHO)mkdir -p $(YAUL_PREFIX)/bin
+	$(ECHO)$(INSTALL) -m 755 $< $(YAUL_PREFIX)/bin/
 	@printf -- "$(V_BEGIN_BLUE)fsck.genromfs$(V_END)\n"
-	$(ECHO)$(INSTALL) -m 755 fsck.genromfs $(YAUL_INSTALL_ROOT)/bin/
+	$(ECHO)$(INSTALL) -m 755 fsck.genromfs $(YAUL_PREFIX)/bin/
 
 -include $(DEPS)
