Remove tools/ssload

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -3,18 +3,9 @@ PROJECTS:= \
 	bin2o \
 	make-cue \
 	make-iso \
-	make-ip \
-	ssload
+	make-ip
 
 include ../env.mk
-
-# XXX: Currently, gdb-ftdi-proxy is broken under Windows
-ifneq ($(OS), Windows_NT)
-ifeq ($(strip $(BUILD_CROSS)),)
-PROJECTS+= \
-	gdb-ftdi-proxy
-endif
-endif
 
 .PHONY: all clean distclean install
 
