Update make-iso to make use of xorrisofs
There is a placeholder check to stay compatible with the current version
of Yaul.

--- a/yaul.env.in
+++ b/yaul.env.in
@@ -56,8 +56,8 @@ export SILENT=1
 #  1: Do not display
 export NOCOLOR=
 
-# Absolute path for executable xorriso
-export MAKE_ISO_XORRISO=/usr/bin/xorriso
+# Absolute path for executable xorrisofs
+export MAKE_ISO_XORRISOFS=/usr/bin/xorrisofs
 
 # Absolute path for native GCC executable. This is used if YAUL_CDB=1
 export CDB_GCC=/usr/bin/gcc
