Add new config variable

--- a/yaul.env.in
+++ b/yaul.env.in
@@ -56,6 +56,12 @@ export SILENT=1
 #  1: Do not display
 export NOCOLOR=
 
+# Enable DEBUG on a release build
+# Values:
+#   : Disable DEBUG
+#  1: Enable DEBUG
+export DEBUG_RELEASE=1
+
 # Absolute path for executable xorrisofs
 export MAKE_ISO_XORRISOFS=/usr/bin/xorrisofs
 
