--- a/tools/satconv/Makefile
+++ b/tools/satconv/Makefile
@@ -1,17 +1,66 @@
-CC = gcc
+include ../../env.mk
 
-TARGET = satconv
-CFLAGS = -g -std=gnu99 -Wall -fsanitize=address -DEZXML_NOMMAP
+TARGET:= satconv
+PROGRAM:= $(TARGET)$(EXE_EXT)
 
-OBJECTS = satconv.o ezxml.o qdbmp.o map.o sprite.o tile.o
+SUB_BUILD:=$(YAUL_BUILD)/tools/$(TARGET)
 
-all: $(TARGET)
+SRCS:= \
+	ezxml.c \
+	map.c \
+	qdbmp.c \
+	satconv.c \
+	sprite.c \
+	tile.c
+
+CFLAGS:= \
+	-DEZXML_NOMMAP \
+	-O2 \
+	-g \
+	-s \
+	-std=gnu99 \
+	-Wall \
+	-Wextra \
+	-Wuninitialized \
+	-Winit-self \
+	-Wuninitialized \
+	-Wshadow \
+	-Wno-unused \
+	-Wno-parentheses \
+	-Wno-sign-compare
+
+LDFLAGS=
+
+INCLUDES:=
+
+OBJS:= $(addprefix $(YAUL_BUILD_ROOT)/$(SUB_BUILD)/,$(SRCS:.c=.o))
+DEPS:= $(addprefix $(YAUL_BUILD_ROOT)/$(SUB_BUILD)/,$(SRCS:.c=.d))
+
+.PHONY: all clean distclean install
+
+all: $(YAUL_BUILD_ROOT)/$(SUB_BUILD)/$(PROGRAM)
+
+$(YAUL_BUILD_ROOT)/$(SUB_BUILD)/$(PROGRAM): $(YAUL_BUILD_ROOT)/$(SUB_BUILD) $(OBJS)
+	@printf -- "$(V_BEGIN_YELLOW)$(shell v="$@"; printf -- "$${v#$(YAUL_BUILD_ROOT)/}")$(V_END)\n"
+	$(ECHO)$(CC) -o $@ $(OBJS) $(LDFLAGS)
+
+$(YAUL_BUILD_ROOT)/$(SUB_BUILD):
+	$(ECHO)mkdir -p $@
+
+$(YAUL_BUILD_ROOT)/$(SUB_BUILD)/%.o: %.c
+	@printf -- "$(V_BEGIN_YELLOW)$(shell v="$@"; printf -- "$${v#$(YAUL_BUILD_ROOT)/}")$(V_END)\n"
+	$(ECHO)mkdir -p $(@D)
+	$(ECHO)$(CC) -Wp,-MMD,$(YAUL_BUILD_ROOT)/$(SUB_BUILD)/$*.d $(CFLAGS) $(foreach DIR,$(INCLUDES),-I$(DIR)) -c -o $@ $<
+	$(ECHO)$(SED) -i -e '1s/^\(.*\)$$/$(subst /,\/,$(dir $@))\1/' $(YAUL_BUILD_ROOT)/$(SUB_BUILD)/$*.d
 
 clean:
-	rm *.o
+	$(ECHO)$(RM) $(OBJS) $(DEPS) $(YAUL_BUILD_ROOT)/$(SUB_BUILD)/$(PROGRAM)
 
-$(TARGET): $(OBJECTS)
-	$(CC) $(CFLAGS) -o $@ $(OBJECTS)
+distclean: clean
 
-%.o: %.c
-	$(CC) -c $(CFLAGS) -o $@ $<
+install: $(YAUL_BUILD_ROOT)/$(SUB_BUILD)/$(PROGRAM)
+	@printf -- "$(V_BEGIN_BLUE)$(SUB_BUILD)/$(PROGRAM)$(V_END)\n"
+	$(ECHO)mkdir -p $(YAUL_PREFIX)/bin
+	$(ECHO)$(INSTALL) -m 755 $< $(YAUL_PREFIX)/bin/
+
+-include $(DEPS)
